# mlops4ecm-workshops

./: README.md
edge-deployment/: README.md
edge-deployment/01-first-steps-with-olama/: README.md
edge-deployment/01-first-steps-with-ollama/: README.md
edge-deployment/02-grocery-classification/: 01-chat.py  03-classify-image.py  README.md  classify-dataset.py  classify-image.py  describe-image.py  requirements.txt
edge-deployment/02-grocery-classification-solution/: 01-chat.py  03-classify-image.py  classify-dataset.py  classify-image.py
edge-deployment/03-synthetic-data-generation/: README.md  generate-image.py  requirements.txt
edge-deployment/03-synthetic-data-generation-solution/: describe-dataset.py  synthetic-data.py  synthetic_data.py
edge-deployment/04-train-on-augmented-dataset/: README.md  data_utils.py  dataset_analysis.ipynb  prediction_gallery.ipynb  run_training.py  synthetic_data.py  train_utils.py
edge-deployment/05-explore-whisper/: 01-record-audio-app.py  02-whisper-huggingface.py  03-export-encoder-decoder.py  README.md  requirements.txt
edge-deployment/06-deploy-whisper/: 04-export-whisper-onnx.py  05-run-whisper-onnx.py  README.md
edge-deployment/06-deploy-whisper/07-whisper-on-arm/: CMakeLists.txt  main.cpp
edge-deployment/06-deploy-whisper/07-whisper-on-arm/lib/: libortextensions.so.0.15.0
edge-deployment/99-benchmarking-ollama-rock5b/: README.md
generative-ai/: README.md
generative-ai/01-first-language-model/: README.md
generative-ai/02-storytelling-assistant/: README.md  (+2 more)
ml-infrastructure/: README.md
(+95 files in other folders)
